--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <h1>Simple Calculator</h1>
     <div id="calculator">
         <input id="display" type="text" readonly>
         <div id="keys">
